--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,12 +8,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>About Astro</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/about/">Sobre mi</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro</h1>
+		<h1>About Alejo</h1>
+        <p>Soy Developer web</p>
 	</body>
 </html>
